# LawGPT

./: README.md  pyproject.toml  requrements24122023.txt
lawgpt/: LICENSE  Makefile  README.md  setup.py  test_environment.py
lawgpt/docs/: Makefile  conf.py  index.rst  make.bat
lawgpt/llamantino7summarization/: README.md
lawgpt/notebooks/: 00-gp-exploration_data_summarization_eur_lex_sum.ipynb  01-gp-data_exploration_europarl_corpus_it.ipynb  02-gp-data_exploration_itacasehold.ipynb  03-gp-data_exploration_cortecostituzionale.ipynb  04-gp-data_exploration_semplification.ipynb  05-gp-scraping_cassazione.ipynb  06-gp-llama2finetuning.ipynb  07-gp-t5finetuning.ipynb  08-gp-test_finetuneparameters.ipynb  09-gp-union_train_dataset.ipynb  10-gp-take_some_response_from_inference.ipynb  11-gp-clean_data_sentences.ipynb  12-gp-format_for_test_web_site.ipynb
lawgpt/src/data/: make_dataset.py  semplification_data_structure.py  summarization_data_structure.py
lawgpt/src/data/make_datasets/: MakeDataset_Protocol.py  main_makedataset.py  make_dataset.py  make_dataset_utils.py
lawgpt/src/features/: finetune_models.py  inference_test.py
lawgpt/src/models/: info_parameters.md  parse_args_utils.py
lawgpt/src/models/Arguments/: BitsAndBytesArgs.py  DataTrainingArgs.py  LoraArgs.py  ModelArgs.py
lawgpt/src/models/models_llama/: AbstractLanguageModel.py  ChatGPT.py  GPT4.py  LLaMA2_13B.py  LLaMA2_7B.py
lawgpt/src/models/protocols/: InferenceModelProtocol.py  PromptProtocol.py  (+1 more)
lounch/: launch.bh  lounch.txt
prompt/: FT-LLaMA2_prompt  gemma_prompt.txt  system_prompt.txt
